# xnb

./: CMakeLists.txt  Config.cmake.in  README.md  main.cpp
include/: lzxDecoder.h  readers.h  xcompress.h  xnb.h
include/xnb/: bufferReader.h  readers.h  xnb.h
src/: LzxDecoder.cpp  bufferReader.cpp  lzxDecoder.cpp  reader.cpp  readers.cpp  xcompress.cpp  xnb.cpp
